--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "vue-carousel": "^0.18.0",
-    "vue-flux": "^6.4.0"
+    "vue-carousel": "^0.18.0"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.2.1",
